backgroung image fix 2nd

--- a/index.html
+++ b/index.html
@@ -93,28 +93,34 @@
           </div>
           <div class="row mx-auto w-75">
             <div class="col-md-4 text-center">
-              <button
-                type="button"
-                class="btn btn-outline-light my-2 p-3 w-100"
+              <a href="#"
+                ><button
+                  type="button"
+                  class="btn btn-outline-light my-2 p-3 w-100"
+                >
+                  Train of Thought
+                </button></a
               >
-                Train of Thought
-              </button>
             </div>
             <div class="col-md-4 text-center">
-              <button
-                type="button"
-                class="btn btn-outline-light my-2 p-3 w-100"
+              <a href="#"
+                ><button
+                  type="button"
+                  class="btn btn-outline-light my-2 p-3 w-100"
+                >
+                  Round And Round
+                </button></a
               >
-                Round And Round
-              </button>
             </div>
             <div class="col-md-4 text-center">
-              <button
-                type="button"
-                class="btn btn-outline-light my-2 p-3 w-100"
+              <a href="#"
+                ><button
+                  type="button"
+                  class="btn btn-outline-light my-2 p-3 w-100"
+                >
+                  Tour
+                </button></a
               >
-                Tour
-              </button>
             </div>
           </div>
         </div>
