add other pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home |Nana A.J</title>
+    <title>Nana A.J | Home</title>
     <!-- bootstrap css  -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- main css  -->
@@ -37,20 +37,20 @@
               <li class="nav-item single_link">
                 <a class="nav-link" href="/index.html">Home</a>
               </li>
-              <li class="nav-item single_link">
+              <!-- <li class="nav-item single_link">
                 <a class="nav-link" href="#">News</a>
               </li>
               <li class="nav-item single_link">
                 <a class="nav-link" href="#">Music</a>
+              </li> -->
+              <li class="nav-item single_link">
+                <a class="nav-link" href="/index.html#videos">Videos</a>
               </li>
               <li class="nav-item single_link">
-                <a class="nav-link" href="#">Videos</a>
+                <a class="nav-link" href="/bio.html">Bio</a>
               </li>
               <li class="nav-item single_link">
-                <a class="nav-link" href="#">Bio</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="#">Tour</a>
+                <a class="nav-link" href="/tour.html">Tour</a>
               </li>
               <li class="nav-item single_link">
                 <a class="nav-link" href="/contact.html">Contact</a>
@@ -89,11 +89,21 @@
         <!-- end of nav bar  -->
         <div class="row main_sec">
           <div class="col-md-12">
-            <h3 class="text-center text-light">TRAIN OF THOUGHT EP -OUT NOW</h3>
+            <h3 class="text-center text-light">WE DEY COOL EP -OUT SOON</h3>
           </div>
           <div class="row mx-auto w-75">
             <div class="col-md-4 text-center">
-              <a href="#"
+              <a target="_blank" href="#"
+                ><button
+                  type="button"
+                  class="btn btn-outline-light my-2 p-3 w-100"
+                >
+                  We Dey Cool
+                </button></a
+              >
+            </div>
+            <div class="col-md-4 text-center">
+              <a target="_blank" href="https://linktr.ee/nana_a.j"
                 ><button
                   type="button"
                   class="btn btn-outline-light my-2 p-3 w-100"
@@ -103,7 +113,9 @@
               >
             </div>
             <div class="col-md-4 text-center">
-              <a href="#"
+              <a
+                target="_blank"
+                href="https://lnk.pedalrecords.com/round-and-round"
                 ><button
                   type="button"
                   class="btn btn-outline-light my-2 p-3 w-100"
@@ -112,22 +124,12 @@
                 </button></a
               >
             </div>
-            <div class="col-md-4 text-center">
-              <a href="#"
-                ><button
-                  type="button"
-                  class="btn btn-outline-light my-2 p-3 w-100"
-                >
-                  Tour
-                </button></a
-              >
-            </div>
           </div>
         </div>
       </div>
     </section>
     <section>
-      <div class="container">
+      <div id="videos" class="container">
         <div class="row mx-auto">
           <div class="col">
             <h2 class="text-center my-5">SEASONS</h2>
@@ -174,6 +176,7 @@
               allowfullscreen
             ></iframe>
           </div>
+
           <div class="col">
             <h2 class="text-center my-5">
               PLAYING AT THE CLIMATE JUSTICE FESTIVAL 2021 IN BERLIN
@@ -184,6 +187,20 @@
               width="560"
               height="315"
               src="https://www.youtube.com/embed/Lle46-WvfSU"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="col">
+            <h2 class="text-center my-5">Nana A.J live at Benefit Concert</h2>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/UhjRu8wqEg4"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
