--- a/tour.html
+++ b/tour.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nana A.J | Contact</title>
+    <title>Nana A.J | Bio</title>
     <!-- bootstrap css  -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- main css  -->
@@ -13,8 +13,8 @@
     <script src="/js/all.js"></script>
   </head>
   <body>
-    <section class="contact_section">
-      <div class="container-fluid contact">
+    <section class="tour_section">
+      <div class="container-fluid tour">
         <!-- nav bar  -->
 
         <nav class="navbar navbar-expand-lg">
@@ -87,73 +87,41 @@
           </div>
         </nav>
         <!-- end of nav bar  -->
-        <div class="row contact_sec">
+        <div class="row tour_sec">
           <div class="col-md-6 mx-auto">
-            <h1 class="text-left text-light">CONTACT</h1>
+            <h1 class="text-left text-light">Tour Dates</h1>
           </div>
         </div>
       </div>
     </section>
     <section class="contact_form">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 bookings">
-            <h3 class="mb-4">Details</h3>
-            <a href="#"><p class="my-5 px-0">BOOKINGS</p></a>
-            <div class="py-5">
-              <a
-                target="blank"
-                href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
-                ><i class="fa-brands fa-soundcloud px-1"></i
-              ></a>
-              <a target="blank" href="https://www.facebook.com/atotheflippingj/"
-                ><i class="fab fa-facebook-f px-1"></i
-              ></a>
-              <a target="blank" href="https://www.instagram.com/nana_a.j/"
-                ><i class="fab fa-instagram px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
-                ><i class="fab fa-twitter px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
-                ><i class="fa-brands fa-spotify px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
-                ><i class="fab fa-youtube px-1"></i
-              ></a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <form action="">
-              <label>Name *</label>
+        <div class="row justify-content-center">
+          <div class="col-6">
+            <p>
+              Nana A.J is a Berlin based Rap artist and producer from Accra,
+              Ghana (West Africa). His music inspires and encourages. His genre
+              fusion of Gospel, Hip Hop & Afrobeat is an artistic expression of
+              who he is. <br /><br />
+              Nana A.J embarked on his musical career as a teenager, releasing a
+              couple of songs under his former stage name A.J. At a point in
+              time, he realized he wanted to use his impact to make a positive
+              change in the lives of people. Refusing to follow the trends of
+              this world, he elevated his songwriting and birthed something
+              special.
+              <br /><br />
+              His EPs “On The Low” and “Train of Thought” have been making waves
+              ever since their release and are doing very well on online music
+              platforms.
               <br />
-              <input type="text" id="fname" placeholder="First Name" required />
-              <input type="text" id="lname" placeholder="Last Name" required />
               <br />
-              <label for="mail">Email</label>
-              <br />
-              <input type="email" id="mail" required />
-              <br />
-              <label for="message">Message</label>
-              <br />
-              <textarea
-                name="message"
-                id="message"
-                rows="3"
-                cols="40"
-                required
-              ></textarea>
-              <br />
-              <input type="submit" value="Send" class="contact_form_send" />
-            </form>
+              As a passionate and energizing performer, Nana A.J is set to take
+              Rap music to a different level with his life changing music, that
+              speaks directly to the soul.
+            </p>
           </div>
         </div>
+        <div class="col-md-6"></div>
       </div>
     </section>
     <section class="footer">
