--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- end of nav bar  -->
         <div class="row main_sec">
           <div class="col-md-12">
-            <h3 class="text-center text-light">WE DEY COOL EP -OUT SOON</h3>
+            <h3 class="text-center text-light">WE GO DEY COOL EP -OUT SOON</h3>
           </div>
           <div class="row mx-auto w-75">
             <div class="col-md-4 text-center">
@@ -98,7 +98,7 @@
                   type="button"
                   class="btn btn-outline-light my-2 p-3 w-100"
                 >
-                  We Dey Cool
+                  We Go Dey Cool
                 </button></a
               >
             </div>
