--- a/tour.html
+++ b/tour.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nana A.J | Bio</title>
+    <title>Nana A.J | Tour</title>
     <!-- bootstrap css  -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- main css  -->
@@ -94,34 +94,60 @@
         </div>
       </div>
     </section>
-    <section class="contact_form">
+    <section class="tours">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-6">
-            <p>
-              Nana A.J is a Berlin based Rap artist and producer from Accra,
-              Ghana (West Africa). His music inspires and encourages. His genre
-              fusion of Gospel, Hip Hop & Afrobeat is an artistic expression of
-              who he is. <br /><br />
-              Nana A.J embarked on his musical career as a teenager, releasing a
-              couple of songs under his former stage name A.J. At a point in
-              time, he realized he wanted to use his impact to make a positive
-              change in the lives of people. Refusing to follow the trends of
-              this world, he elevated his songwriting and birthed something
-              special.
-              <br /><br />
-              His EPs “On The Low” and “Train of Thought” have been making waves
-              ever since their release and are doing very well on online music
-              platforms.
-              <br />
-              <br />
-              As a passionate and energizing performer, Nana A.J is set to take
-              Rap music to a different level with his life changing music, that
-              speaks directly to the soul.
-            </p>
+          <div class="col-md-12 text-center my-5">
+            <h4>Past Events</h4>
+          </div>
+          <div class="col-md-9">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Date</th>
+                  <th scope="col">Event</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>March, 2021</td>
+                  <td>Benefit Concert Berlin 2022</td>
+                </tr>
+                <tr>
+                  <td>June, 2021</td>
+                  <td>Afrika Praiz Concert 2021</td>
+                </tr>
+                <tr>
+                  <td>September, 2021</td>
+                  <td>Climate Justice Festival 2021</td>
+                </tr>
+                <tr>
+                  <td>September , 2021</td>
+                  <td>Fête de la Musique 2021</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-md-12 text-center my-5">
+            <h4>Upcoming Events</h4>
+          </div>
+          <div class="col-md-9">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Date</th>
+                  <th scope="col">Event</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>16th May, 2022</td>
+                  <td>Umsonst und Draußen Festival Würzburg 2022</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
-        <div class="col-md-6"></div>
       </div>
     </section>
     <section class="footer">
