--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,10 @@
               <li class="nav-item single_link">
                 <a class="nav-link" href="/index.html">Home</a>
               </li>
-              <!-- <li class="nav-item single_link">
-                <a class="nav-link" href="#">News</a>
-              </li>
               <li class="nav-item single_link">
+                <a class="nav-link" href="/news.html">News</a>
+              </li>
+              <!--  <li class="nav-item single_link">
                 <a class="nav-link" href="#">Music</a>
               </li> -->
               <li class="nav-item single_link">
