--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               <li class="nav-item single_link">
                 <a class="nav-link" href="/index.html">Home</a>
               </li>
-              <!-- <li class="nav-item single_link">
-                <a class="nav-link" href="#">News</a>
-              </li>
               <li class="nav-item single_link">
+                <a class="nav-link" href="/news.html">News</a>
+              </li>
+              <!--  <li class="nav-item single_link">
                 <a class="nav-link" href="#">Music</a>
               </li> -->
               <li class="nav-item single_link">
@@ -89,11 +89,13 @@
         <!-- end of nav bar  -->
         <div class="row main_sec">
           <div class="col-md-12">
-            <h3 class="text-center text-light">WE GO DEY COOL EP -OUT SOON</h3>
+            <h3 class="text-center text-light">WE GO DEY COOL EP - OUT SOON</h3>
           </div>
           <div class="row mx-auto w-75">
             <div class="col-md-4 text-center">
-              <a target="_blank" href="#"
+              <a
+                target="_blank"
+                href="http://url2734.distrokid.com/ls/click?upn=gIy05sl-2BkeX0Wcl7-2B1nYOTQWWeGlFhShnhnCU8f1UBBJPovzwgAWk8HjiJtxXgr-2FjIW5f5c6ptJKo5WVGFP59TgXPkmRfvD-2FzP6Ep07Us-2BQoxXygNsWbbN0zbjkBZ3YpIvFXfQh76AMyi7qYJqjW43DuYWFjOXhqE-2FMA7kMZG7k-3DFqZG_lL0iJKJF1ML31xJr4YvB-2Bn0YbmhYi4O106fmUcp-2FbrFlxsLI-2BYQ2Xmz-2B1c8rVaG8Mgi7-2BG9aQvIWaiI4p6ucFxkGFgscNJa6kzi8k-2BJPmePoveHPgQ30FEc5VjpHfyg9k6pVIkOSxg6eUJ8hAtZY0hN9HIZrZdz4vb6irfLBc2FNQYJI12uVBjaTYtRWcO9B-2BV9Cq6vtpl3RDVUkbsJdCA-3D-3D"
                 ><button
                   type="button"
                   class="btn btn-outline-light my-2 p-3 w-100"
