fix some wording in news

--- a/news.html
+++ b/news.html
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="row my-5">
           <div class="col-md-4 my-auto">
-            <h3>Nana A.J featured in Peal Records launch</h3>
+            <h3>Nana A.J featured in Pedal Records launch</h3>
             <a
               target="_blank"
               class="read-more"
