--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <form action="">
+            <form action="" class="contact-form">
               <label>Name *</label>
               <br />
               <input type="text" id="fname" placeholder="First Name" required />
@@ -200,5 +200,6 @@
 
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/contact.js"></script>
   </body>
 </html>
