--- a/news.html
+++ b/news.html
@@ -98,6 +98,61 @@
       <div class="container">
         <div class="row my-5">
           <div class="col-md-4 my-auto">
+            <h3>Nana A.J on Gorillas</h3>
+            <a
+              target="_blank"
+              class="read-more"
+              href="https://gorillas.io/en/blog/black-history-month-at-gorillas"
+            >
+              Ream More</a
+            >
+          </div>
+          <div class="col-md-6 mx-4">
+            <a
+              target="_blank"
+              href="https://gorillas.io/en/blog/black-history-month-at-gorillas"
+              ><img
+                class="img-fluid my-5"
+                src="/images/black-history.PNG"
+                alt=""
+            /></a>
+          </div>
+        </div>
+        <div class="row my-5">
+          <div class="col-md-4 my-auto small">
+            <h3>Nana A.J reassures on new single Bigger</h3>
+            <a
+              target="_blank"
+              class="read-more"
+              href="https://gorillas.io/en/blog/pedal-records-newest-artists"
+            >
+              Ream More</a
+            >
+          </div>
+          <div class="col-md-6 mx-4">
+            <a
+              target="_blank"
+              href="https://gorillas.io/en/blog/pedal-records-newest-artists"
+              ><img
+                class="img-fluid my-5"
+                src="/images/gor art.PNG"
+                width="500"
+                alt=""
+            /></a>
+          </div>
+          <div class="col-md-4 my-auto big">
+            <h3>Nana A.J reassures on new single Bigger</h3>
+            <a
+              target="_blank"
+              class="read-more"
+              href="https://www.ghanaweb.com/GhanaHomePage/entertainment/Nana-A-J-reassures-on-new-single-Bigger-1280410"
+            >
+              Ream More</a
+            >
+          </div>
+        </div>
+        <div class="row my-5">
+          <div class="col-md-4 my-auto">
             <h3>Nana A.J featured in Pedal Records launch</h3>
             <a
               target="_blank"
