--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nana A.J | Home</title>
     <!-- bootstrap css  -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
     <!-- main css  -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- font awesome  -->
     <script src="/js/all.js"></script>
   </head>
@@ -268,5 +268,6 @@
 
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
