--- a/tour.html
+++ b/tour.html
@@ -110,6 +110,14 @@
               </thead>
               <tbody>
                 <tr>
+                  <td>TBA</td>
+                  <td>Special December</td>
+                </tr>
+                <tr>
+                  <td>5th November 2022</td>
+                  <td>A.J and Friends</td>
+                </tr>
+                <tr>
                   <td>16th May, 2022</td>
                   <td>Umsonst und Draußen Festival Würzburg 2022</td>
                 </tr>
