--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,22 @@
     <link rel="stylesheet" href="/css/style.css" />
     <!-- font awesome  -->
     <script src="/js/all.js"></script>
+    <!-- mailchimp  -->
+    <link
+      href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <style type="text/css">
+      #mc_embed_signup {
+        background: #fff;
+        clear: left;
+        font: 14px Helvetica, Arial, sans-serif;
+        /* width: 600px; */
+      }
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
   </head>
   <body>
     <section class="contact_section">
@@ -99,7 +115,9 @@
         <div class="row">
           <div class="col-md-6 bookings">
             <h3 class="mb-4">Details</h3>
-            <a href="#"><p class="my-5 px-0">BOOKINGS</p></a>
+            <a target="_blank" href="mailto:nanaaj007@gmail.com"
+              ><p class="my-5 px-0">BOOKINGS</p></a
+            >
             <div class="py-5">
               <a
                 target="blank"
@@ -130,7 +148,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <form action="" class="contact-form">
+            <!-- <form action="" class="contact-form">
               <label>Name *</label>
               <br />
               <input type="text" id="fname" placeholder="First Name" required />
@@ -151,7 +169,142 @@
               ></textarea>
               <br />
               <input type="submit" value="Send" class="contact_form_send" />
-            </form>
+            </form> -->
+
+            <!-- Begin Mailchimp Signup Form -->
+
+            <div id="mc_embed_signup">
+              <form
+                action="https://gmail.us12.list-manage.com/subscribe/post?u=887e407783925a9343f37cdce&amp;id=faff998900"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate
+              >
+                <div id="mc_embed_signup_scroll">
+                  <div class="indicates-required">
+                    <span class="asterisk">*</span> indicates required
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-EMAIL"
+                      >Email Address <span class="asterisk">*</span>
+                    </label>
+                    <input
+                      type="email"
+                      value=""
+                      name="EMAIL"
+                      class="required email"
+                      id="mce-EMAIL"
+                    />
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-FNAME"
+                      >First Name <span class="asterisk">*</span>
+                    </label>
+                    <input
+                      type="text"
+                      value=""
+                      name="FNAME"
+                      class="required"
+                      id="mce-FNAME"
+                    />
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-LNAME"
+                      >Last Name <span class="asterisk">*</span>
+                    </label>
+                    <input
+                      type="text"
+                      value=""
+                      name="LNAME"
+                      class="required"
+                      id="mce-LNAME"
+                    />
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-MMERGE6">Message </label>
+                    <input
+                      type="text"
+                      value=""
+                      name="MMERGE6"
+                      class=""
+                      id="mce-MMERGE6"
+                    />
+                  </div>
+                  <div id="mce-responses" class="clear foot">
+                    <div
+                      class="response"
+                      id="mce-error-response"
+                      style="display: none"
+                    ></div>
+                    <div
+                      class="response"
+                      id="mce-success-response"
+                      style="display: none"
+                    ></div>
+                  </div>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div
+                    style="position: absolute; left: -5000px"
+                    aria-hidden="true"
+                  >
+                    <input
+                      type="text"
+                      name="b_887e407783925a9343f37cdce_faff998900"
+                      tabindex="-1"
+                      value=""
+                    />
+                  </div>
+                  <div class="optionalParent">
+                    <div class="clear foot">
+                      <input
+                        type="submit"
+                        value="Send"
+                        name="subscribe"
+                        id="mc-embedded-subscribe"
+                        class="button"
+                      />
+                      <p class="brandingLogo">
+                        <a
+                          href="http://eepurl.com/h2bfCv"
+                          title="Mailchimp - email marketing made easy and fun"
+                          ><img
+                            src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"
+                        /></a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <script
+              type="text/javascript"
+              src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+            ></script>
+            <script type="text/javascript">
+              (function ($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0] = 'EMAIL';
+                ftypes[0] = 'email';
+                fnames[1] = 'FNAME';
+                ftypes[1] = 'text';
+                fnames[2] = 'LNAME';
+                ftypes[2] = 'text';
+                fnames[3] = 'ADDRESS';
+                ftypes[3] = 'address';
+                fnames[4] = 'PHONE';
+                ftypes[4] = 'phone';
+                fnames[5] = 'BIRTHDAY';
+                ftypes[5] = 'birthday';
+                fnames[6] = 'MMERGE6';
+                ftypes[6] = 'text';
+              })(jQuery);
+              var $mcj = jQuery.noConflict(true);
+            </script>
+            <!--End mc_embed_signup-->
           </div>
         </div>
       </div>
@@ -200,6 +353,5 @@
 
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
-    <script src="/contact.js"></script>
   </body>
 </html>
