--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- font awesome  -->
     <script src="/js/all.js"></script>
+    <!-- mail chimp -->
+    <link
+      href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <style type="text/css">
+      #mc_embed_signup {
+        background: #fff;
+        clear: left;
+        font: 14px Helvetica, Arial, sans-serif;
+        /* width: 600px; */
+      }
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
   </head>
   <body>
     <section class="home_section">
@@ -214,14 +230,120 @@
     </section>
     <section class="newsletter mt-5">
       <div class="container">
-        <form action="" class="newsletterform">
+        <!-- <form action="" class="newsletterform">
           <h2 class="text-light py-4">New music coming soon!</h2>
           <h6 class="text-light pb-5">
             Sign up to be amongst the first to hear it.
           </h6>
           <input type="email" class="input_email" placeholder="Email Address" />
           <input type="submit" class="input_signUp" value="Sign Up" />
-        </form>
+        </form> -->
+        <div class="row">
+          <div class="com-md-6">
+            <!-- Begin Mailchimp Signup Form -->
+
+            <div class="newsletterform" id="mc_embed_signup">
+              <form
+                action="https://gmail.us12.list-manage.com/subscribe/post?u=887e407783925a9343f37cdce&amp;id=faff998900"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate
+              >
+                <div id="mc_embed_signup_scroll">
+                  <h1 class="mb-5">New music coming soon!</h1>
+                  <h6>Sign up to be amongst the first to hear it.</h6>
+                  <div class="indicates-required">
+                    <span class="asterisk">*</span> indicates required
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-EMAIL"
+                      >Email Address <span class="asterisk">*</span>
+                    </label>
+                    <input
+                      type="email"
+                      value=""
+                      name="EMAIL"
+                      class="required email"
+                      id="mce-EMAIL"
+                    />
+                  </div>
+                  <div id="mce-responses" class="clear foot">
+                    <div
+                      class="response"
+                      id="mce-error-response"
+                      style="display: none"
+                    ></div>
+                    <div
+                      class="response"
+                      id="mce-success-response"
+                      style="display: none"
+                    ></div>
+                  </div>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div
+                    style="position: absolute; left: -5000px"
+                    aria-hidden="true"
+                  >
+                    <input
+                      type="text"
+                      name="b_887e407783925a9343f37cdce_faff998900"
+                      tabindex="-1"
+                      value=""
+                    />
+                  </div>
+                  <div class="optionalParent">
+                    <div class="clear foot">
+                      <input
+                        type="submit"
+                        value="Sign Up"
+                        name="subscribe"
+                        id="mc-embedded-subscribe"
+                        class="button"
+                      />
+                      <p class="brandingLogo">
+                        <a
+                          href="http://eepurl.com/h2bfCv"
+                          title="Mailchimp - email marketing made easy and fun"
+                          ><img
+                            src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"
+                        /></a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <script
+              type="text/javascript"
+              src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+            ></script>
+            <script type="text/javascript">
+              (function ($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0] = 'EMAIL';
+                ftypes[0] = 'email';
+                fnames[1] = 'FNAME';
+                ftypes[1] = 'text';
+                fnames[2] = 'LNAME';
+                ftypes[2] = 'text';
+                fnames[3] = 'ADDRESS';
+                ftypes[3] = 'address';
+                fnames[4] = 'PHONE';
+                ftypes[4] = 'phone';
+                fnames[5] = 'BIRTHDAY';
+                ftypes[5] = 'birthday';
+                fnames[6] = 'MMERGE6';
+                ftypes[6] = 'text';
+              })(jQuery);
+              var $mcj = jQuery.noConflict(true);
+            </script>
+            <!--End mc_embed_signup-->
+          </div>
+        </div>
       </div>
     </section>
     <section class="footer">
@@ -268,6 +390,5 @@
 
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
-    <script src="/app.js"></script>
   </body>
 </html>
