--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <input type="submit" class="input_signUp" value="Sign Up" />
         </form> -->
         <div class="row">
-          <div class="com-md-6">
+          <div class="com-md-6 mx-2">
             <!-- Begin Mailchimp Signup Form -->
 
             <div class="newsletterform" id="mc_embed_signup">
