--- a/contact.html
+++ b/contact.html
@@ -236,12 +236,12 @@
                   <div id="mce-responses" class="clear foot">
                     <div
                       class="response"
-                      id="mce-error-response"
+                      id="me-error-response"
                       style="display: none"
                     ></div>
                     <div
                       class="response"
-                      id="mce-success-response"
+                      id="me-success-response"
                       style="display: none"
                     ></div>
                   </div>
