--- a/contact.html
+++ b/contact.html
@@ -184,6 +184,7 @@
                 novalidate
               >
                 <div id="mc_embed_signup_scroll">
+                  <h2>Sign up to be amongst the first to hear it.</h2>
                   <div class="indicates-required">
                     <span class="asterisk">*</span> indicates required
                   </div>
@@ -224,24 +225,29 @@
                     />
                   </div>
                   <div class="mc-field-group">
-                    <label for="mce-MMERGE6">Message </label>
+                    <label for="mce-MMERGE6"
+                      >Message <span class="asterisk">*</span>
+                    </label>
                     <input
                       type="text"
                       value=""
                       name="MMERGE6"
-                      class=""
+                      class="required"
                       id="mce-MMERGE6"
                     />
+                  </div>
+                  <div hidden="true">
+                    <input type="hidden" name="tags" value="10402524" />
                   </div>
                   <div id="mce-responses" class="clear foot">
                     <div
                       class="response"
-                      id="me-error-response"
+                      id="mce-error-response"
                       style="display: none"
                     ></div>
                     <div
                       class="response"
-                      id="me-success-response"
+                      id="mce-success-response"
                       style="display: none"
                     ></div>
                   </div>
@@ -261,7 +267,7 @@
                     <div class="clear foot">
                       <input
                         type="submit"
-                        value="Send"
+                        value="Subscribe"
                         name="subscribe"
                         id="mc-embedded-subscribe"
                         class="button"
@@ -304,6 +310,7 @@
               })(jQuery);
               var $mcj = jQuery.noConflict(true);
             </script>
+            <!--End mc_embed_signup-->
             <!--End mc_embed_signup-->
           </div>
         </div>
