change navbar to fixed

--- a/tour.html
+++ b/tour.html
@@ -13,198 +13,203 @@
     <script src="/js/all.js"></script>
   </head>
   <body>
-    <section class="tour_section">
-      <div class="container-fluid tour">
-        <!-- nav bar  -->
+    <section class="section">
+      <!-- nav bar  -->
 
-        <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand AJ" href="/index.html"
-            ><h3 class="text-center text-light">Nana A.J</h3></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fa-solid fa-bars hamburgerBars"></i>
-          </button>
-          <div class="collapse navbar-collapse nav_links" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/index.html">Home</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/news.html">News</a>
-              </li>
-              <!--  <li class="nav-item single_link">
+      <nav class="navbar fixed-top my-nav navbar-expand-lg w-100">
+        <a class="navbar-brand AJ" href="/index.html"
+          ><h3 class="text-center text-light">Nana A.J</h3></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fa-solid fa-bars hamburgerBars"></i>
+        </button>
+        <div class="collapse navbar-collapse nav_links" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/news.html">News</a>
+            </li>
+            <!--  <li class="nav-item single_link">
                 <a class="nav-link" href="#">Music</a>
               </li> -->
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/index.html#videos">Videos</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/bio.html">Bio</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/tour.html">Tour</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/contact.html">Contact</a>
-              </li>
-            </ul>
-            <div class="nav_socials ml-auto">
-              <a
-                target="blank"
-                href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
-                ><i class="fa-brands fa-soundcloud px-1"></i
-              ></a>
-              <a target="blank" href="https://www.facebook.com/atotheflippingj/"
-                ><i class="fab fa-facebook-f px-1"></i
-              ></a>
-              <a target="blank" href="https://www.instagram.com/nana_a.j/"
-                ><i class="fab fa-instagram px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
-                ><i class="fab fa-twitter px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
-                ><i class="fa-brands fa-spotify px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
-                ><i class="fab fa-youtube px-1"></i
-              ></a>
-            </div>
-          </div>
-        </nav>
-        <!-- end of nav bar  -->
-        <div class="row tour_sec">
-          <div class="col-md-6 mx-auto">
-            <h1 class="text-left text-light">Tour Dates</h1>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/index.html#videos">Videos</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/bio.html">Bio</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/tour.html">Tour</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+          <div class="nav_socials ml-auto">
+            <a
+              target="blank"
+              href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
+              ><i class="fa-brands fa-soundcloud px-1"></i
+            ></a>
+            <a target="blank" href="https://www.facebook.com/atotheflippingj/"
+              ><i class="fab fa-facebook-f px-1"></i
+            ></a>
+            <a target="blank" href="https://www.instagram.com/nana_a.j/"
+              ><i class="fab fa-instagram px-1"></i
+            ></a>
+            <a
+              target="blank"
+              href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
+              ><i class="fab fa-twitter px-1"></i
+            ></a>
+            <a
+              target="blank"
+              href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
+              ><i class="fa-brands fa-spotify px-1"></i
+            ></a>
+            <a
+              target="blank"
+              href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
+              ><i class="fab fa-youtube px-1"></i
+            ></a>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="tours">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-12 text-center my-5">
-            <h4>Upcoming Events</h4>
-          </div>
-          <div class="col-md-9">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Date</th>
-                  <th scope="col">Event</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>TBA</td>
-                  <td>Special December</td>
-                </tr>
-                <tr>
-                  <td>5th November 2022</td>
-                  <td>A.J and Friends</td>
-                </tr>
-                <tr>
-                  <td>16th May, 2022</td>
-                  <td>Umsonst und Draußen Festival Würzburg 2022</td>
-                </tr>
-                <tr>
-                  <td>TBA</td>
-                  <td>Saved to Serve Music Concert - France</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="col-md-12 text-center my-5">
-            <h4>Past Events</h4>
-          </div>
-          <div class="col-md-9">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Date</th>
-                  <th scope="col">Event</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>March, 2021</td>
-                  <td>Benefit Concert Berlin 2022</td>
-                </tr>
-                <tr>
-                  <td>June, 2021</td>
-                  <td>Afrika Praiz Concert 2021</td>
-                </tr>
-                <tr>
-                  <td>September, 2021</td>
-                  <td>Climate Justice Festival 2021</td>
-                </tr>
-                <tr>
-                  <td>September , 2021</td>
-                  <td>Fête de la Musique 2021</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col text-center">
-            <div class="footer_socials">
-              <a
-                target="blank"
-                href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
-                ><i class="fa-brands fa-soundcloud px-1"></i
-              ></a>
-              <a target="blank" href="https://www.facebook.com/atotheflippingj/"
-                ><i class="fab fa-facebook-f px-1"></i
-              ></a>
-              <a target="blank" href="https://www.instagram.com/nana_a.j/"
-                ><i class="fab fa-instagram px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
-                ><i class="fab fa-twitter px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
-                ><i class="fa-brands fa-spotify px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
-                ><i class="fab fa-youtube px-1"></i
-              ></a>
+      </nav>
+      <!-- end of nav bar  -->
+      <section class="tour_section">
+        <div class="container-fluid tour">
+          <div class="row">
+            <div class="col-md-6 mx-auto tour_sec">
+              <h1 class="text-left text-light">Tour Dates</h1>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col text-center">
-            <p>© Nana A.J 2022</p>
+      </section>
+      <section class="tours">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-12 text-center my-5">
+              <h4>Upcoming Events</h4>
+            </div>
+            <div class="col-md-9">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Event</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>TBA</td>
+                    <td>Special December</td>
+                  </tr>
+                  <tr>
+                    <td>5th November 2022</td>
+                    <td>A.J and Friends</td>
+                  </tr>
+                  <tr>
+                    <td>16th May, 2022</td>
+                    <td>Umsonst und Draußen Festival Würzburg 2022</td>
+                  </tr>
+                  <tr>
+                    <td>TBA</td>
+                    <td>Saved to Serve Music Concert - France</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-md-12 text-center my-5">
+              <h4>Past Events</h4>
+            </div>
+            <div class="col-md-9">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Event</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>March, 2021</td>
+                    <td>Benefit Concert Berlin 2022</td>
+                  </tr>
+                  <tr>
+                    <td>June, 2021</td>
+                    <td>Afrika Praiz Concert 2021</td>
+                  </tr>
+                  <tr>
+                    <td>September, 2021</td>
+                    <td>Climate Justice Festival 2021</td>
+                  </tr>
+                  <tr>
+                    <td>September , 2021</td>
+                    <td>Fête de la Musique 2021</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col text-center">
+              <div class="footer_socials">
+                <a
+                  target="blank"
+                  href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
+                  ><i class="fa-brands fa-soundcloud px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://www.facebook.com/atotheflippingj/"
+                  ><i class="fab fa-facebook-f px-1"></i
+                ></a>
+                <a target="blank" href="https://www.instagram.com/nana_a.j/"
+                  ><i class="fab fa-instagram px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
+                  ><i class="fab fa-twitter px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
+                  ><i class="fa-brands fa-spotify px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
+                  ><i class="fab fa-youtube px-1"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <p>© Nana A.J 2022</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
 
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/scrollNav.js"></script>
   </body>
 </html>
